<resources>
    <string name="app_name">Concesionario</string>
    <string name="device_list">Device List</string>
    <string name="create_a_new_device">Create a New Device</string>
    <string name="code">Code:</string>
    <string name="name">Name:</string>
    <string name="category">Category:</string>
    <string name="release_date">Release Date:</string>
    <string name="price">Price:</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="see_components">See Components</string>
    <string name="device_edition">Device Edition</string>
    <string name="device_code">Device Code</string>
    <string name="device_name">Device Name</string>
    <string name="device_category">Device Category</string>
    <string name="device_release_date">Device Release Date</string>
    <string name="device_price">Device Price</string>
    <string name="edit_device">Edit Device</string>
    <string name="cancel">Cancel</string>
    <string name="device_creation">Device Creation</string>
    <string name="create_device">Create Device</string>
    <string name="description">Description:</string>
    <string name="discontinued">Discontinued:</string>
    <string name="parent_device_code">Parent Device Code:</string>
    <string name="component_list">Component List</string>
    <string name="create_a_new_component">Create a New Component</string>
    <string name="parent_device_name">Parent Device Name:</string>
    <string name="component_edition">Component Edition</string>
    <string name="edit_component">Edit Component</string>
    <string name="component_parent_device_code">Parent Device Code</string>
    <string name="component_discontinued">Component Discontinued</string>
    <string name="component_description">Component Description</string>
    <string name="component_category">Component Category</string>
    <string name="component_code">Component Code</string>
    <string name="create_component">Create Component</string>
    <string name="component_creation">Component Creation</string>
    <string name="back">Back</string>
    <string name="create_initial_data">Create Initial Data</string>
    <string name="start_app">Start App</string>
    <string name="exam_2b_andr_s_lozano">Concesionario</string>
</resources>